# TEST

./: .gitignore  AGENTS.md  AUDIT_COMPTA.md  AUDIT_REPORT.md  Application.py  Dockerfile  IMPORTS_FIX_REPORT.md  IMPORTS_PATCH_REPORT.md  LICENSE  README.md  README_en.md  README_fr.md  app.py  build.sh  cli.py  config.py  config.toml  config_manager.py  custom_suffixes.example.py  flask_server.py  image_pipeline.py  liens_avec_id.txt  logger_setup.py  main.py  optimizer.py  pyproject.toml  reporting.py  requirements.txt  scheduler.py  scraper_core.py  scraper_images.py  scraper_woocommerce.py  storage.py  tutoriel_selecteur_visuel.txt  tutoriel_selecteur_visuel_en.txt
accounting/: HELP.md  HELP_en.md  README.md  README_en.md  __init__.py  account.py  bank_import.py  categorization.py  errors.py  journal_entry.py  reconciliation.py  reporting.py  storage.py  transaction.py
c_modules/: README.md
db/: __init__.py  models.py
go_modules/: README.md
js_modules/: README.md
plugins/: README.md  README_fr.md  base.py  woocommerce.py
projet-scrap/: cerveau.py  detecteur.py  requirements.txt
python_packages/: README.md
rust_modules/: README.md
tests/: conftest.py  test_accounting.py  test_app_server.py  test_bank_import.py  test_categorization.py  test_cli_workflow.py  test_config_manager.py  test_core.py  test_image_pipeline.py  test_images_variantes.py  test_optimizer.py  test_reconciliation.py  test_reporting.py  test_reporting_stats.py  test_storage_orm.py
ui/: __init__.py  base_window.py  components.py  main_window.py  responsive.py  style.py  (+2 more)
(+8 files in other folders)
