[project]
name = "woocommerce-scraper"
version = "0.1.0"
description = "Tools for scraping WooCommerce products"
authors = [{name = "Unknown"}]
requires-python = ">=3.10"
dependencies = [
    "selenium",
    "beautifulsoup4",
    "pandas",
    "openpyxl",
    "requests",
    "flask",
    "fpdf2",
    "PySide6",
    "webdriver-manager",
    "playwright",
    "SQLAlchemy",
    "apscheduler",
    "matplotlib",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
woocommerce-scraper = "cli:main"
woocommerce-scraper-gui = "Application:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ui = ["resources/qwebchannel.js"]

